--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<script src="js/jquery-3.4.1.min.js"></script>
-	<script src="js/my_script.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
+	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="animate.css">
+	<script src="jquery-3.4.1.min.js"></script>
+	<script src="my_script.js"></script>
+	<script src="jquery.waypoints.min.js"></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   <header>
     <div class="container">
       <div id="site_logo">
-        <h1><img src="images/logo.png"></h1>
+        <h1><img src="logo.png"></h1>
       </div>
       <div id="site_reserve">
          <p>ご予約はこちらから</p>
@@ -32,7 +32,7 @@
 <!-- スマホ用ボタン -->
       <div class="container">
         <ul id="spnavi">
-          <li id="drop_menu_icon"><img src="images/menu_icon_white.gif"></li>
+          <li id="drop_menu_icon"><img src="menu_icon_white.gif"></li>
           <li id="drop_menu_text">メニュー</li>
         </ul>
 
@@ -49,14 +49,14 @@
   <main>
   <!-- メインイメージ -->
     <section id="mian_image">
-      <img src="images/top_image.png">
+      <img src="top_image.png">
     </section>
   <!--コンセプト -->
     <section id="concept">
       <div class="container">
-        <img id="concept_logo" src="images/concept_image.png">
+        <img id="concept_logo" src="concept_image.png">
         <h2>コンセプト</h2>
-        <img id="concept_image" src="images/concept_image2.png">
+        <img id="concept_image" src="concept_image2.png">
         <p>
           本場イタリアで大人気の本格イタリア料理店がついに日本上陸</br>
           当店自慢のテラス席で極上のイタリア料理とお酒をお楽しみください。
@@ -66,11 +66,11 @@
   <!-- メニュー -->
     <section id="menu">
       <div class="container">
-        <img id="menu_logo" src="images/menu_image.png">
+        <img id="menu_logo" src="menu_image.png">
         <h2>メニュー</h2>
 
         <div class="menu_box">
-          <img src="images/menu_pasta.jpg">
+          <img src="menu_pasta.jpg">
           <h3>パスタ</h3>
           <ul>
             <li>ペペロンチーノ</li>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="menu_box">
-          <img src="images/menu_piza.jpg">
+          <img src="menu_piza.jpg">
           <h3>ピザ</h3>
           <ul>
             <li>マルゲリータ</li>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="menu_box">
-          <img src="images/menu_drink.jpg">
+          <img src="menu_drink.jpg">
           <h3>ドリンク</h3>
           <ul>
             <li>生ビール</li>
@@ -109,20 +109,20 @@
   <!--ギャラリー -->
     <section id="gallery">
       <div class="container">
-        <img id="gallery_logo" src="images/gallery_image.png">
+        <img id="gallery_logo" src="gallery_image.png">
         <h2>当店のギャラリー</h2>
         <div id="slide_show">
           <ul id="slide">
-            <li><img src="images/slide-photo1.jpg"></li>
-            <li><img src="images/slide-photo2.jpg"></li>
-            <li><img src="images/slide-photo3.jpg"></li>
-            <li><img src="images/slide-photo4.jpg"></li>
-            <li><img src="images/slide-photo5.jpg"></li>
-            <li><img src="images/slide-photo6.jpg"></li>
+            <li><img src="slide-photo1.jpg"></li>
+            <li><img src="slide-photo2.jpg"></li>
+            <li><img src="slide-photo3.jpg"></li>
+            <li><img src="slide-photo4.jpg"></li>
+            <li><img src="slide-photo5.jpg"></li>
+            <li><img src="slide-photo6.jpg"></li>
           </ul>
           <div id="nav_btn">
-            <img class="prev" src="images/btn_prev.png">
-            <img class="next"src="images/btn_next.png">
+            <img class="prev" src="btn_prev.png">
+            <img class="next"src="btn_next.png">
           </div>
         </div>
 
@@ -131,7 +131,7 @@
   <!-- アクセス -->
     <section id="access">
       <div class="container">
-        <img id="access_logo" src="images/access_image.png">
+        <img id="access_logo" src="access_image.png">
         <h2>アクセス</h2>
         <div id="access_map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13295.027986794428!2d130.46191626920165!3d33.585658090167506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1561282916140!5m2!1sja!2sjp" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -153,12 +153,12 @@
 
   <!-- page-topボタン -->
   <div class="page_top">
-    <img src="images/page_top.gif">
+    <img src="page_top.gif">
   </div>
 
 <!-- フッター -->
   <footer>
-    <img src="images/logo2.png">
+    <img src="logo2.png">
     <p>Copyright(c) kakenisi.com</p>
   </footer>
 
